tests/ui/unify_let_guards.stderr
error[E0597]: `id` does not live long enough
  --> tests/ui/unify_let_guards.rs:8:5
   |
8  |     guard!(let a, b);
   |     ^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
9  |     unify(a, b);
10 | }
   | -
   | |
   | `id` dropped here while still borrowed
   | borrow might be used here, when `brand` is dropped and runs the `Drop` code for type `Brand`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in the macro `guard` (in Nightly builds, run with -Z macro-backtrace for more info)
